v3/crates/engine/tests/snapshots/execution__common__ir_execute__models__select_many__where__simple.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "AuthorMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "Authors",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "where",
                                ),
                            ): Literal(
                                Object {
                                    "_or": Array [
                                        Object {
                                            "_and": Array [
                                                Object {
                                                    "author_id": Object {
                                                        "_eq": Number(1),
                                                    },
                                                },
                                                Object {
                                                    "first_name": Object {
                                                        "_eq": String("Peter"),
                                                    },
                                                },
                                            ],
                                        },
                                        Object {
                                            "_and": Array [
                                                Object {
                                                    "author_id": Object {
                                                        "_eq": Number(2),
                                                    },
                                                },
                                                Object {
                                                    "first_name": Object {
                                                        "_eq": String("John"),
                                                    },
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ),
                        },
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "author_id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "author_id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "first_name",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "first_name",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
        },
    },
)
